--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="style.css">
     <title>ToDo-List</title>
 </head>
 <body>
-    
+    <main>
+        <section class="list">
+
+        </section>
+    </main>
 </body>
 </html>
