--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
     <title>ToDo-List</title>
 </head>
-<body>
-    <main>
-        <section class="list">
 
+<body>
+    <section class="container">
+        
+    <main class="list">
+        <h1>ToDo-List</h1>
+        <input type="text" value="" name="task" placeholder="Enter a new task">
+        <button class="add">Add</button>
+        <section class="buttonsForSection">
+            <button class="but">Deleted tasks</button>
+            <button class="but">Tasks</button>
+            <button class="but">Completed tasks</button>
         </section>
     </main>
+    </section>
 </body>
+
 </html>
