--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 
 <body>
     <section class="container">
-        
-    <main class="list">
-        <h1>ToDo-List</h1>
-        <input type="text" value="" name="task" placeholder="Enter a new task" id="myInput">
-        <button class="add">Add</button>
-        <section class="buttonsForSection">
-            <button class="but">Deleted tasks</button>
-            <button class="but">Tasks</button>
-            <button class="but">Completed tasks</button>
-        </section>
-        <div class="task_list">
-        </div>
-    </main>
+
+        <main class="list">
+            <h1>ToDo-List</h1>
+            <input type="text" value="" name="task" placeholder="Enter a new task" id="myInput">
+            <button class="add">Add</button>
+            <section class="buttonsForSection">
+                <button class="but buttonOptionDelet">Deleted tasks</button>
+                <button class="but buttonOptionTask" >Tasks</button>
+                <button class="but buttonOptionComplet">Completed tasks</button>
+            </section>
+            <div class="task_list">
+            </div>
+        </main>
     </section>
     <script src="script.js"></script>
 </body>
